--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,13 @@ boto3==1.35.95
 botocore==1.35.95
 
 # Database
-dynamodb-json==1.3.1
+dynamodb-json==1.4.2
 pynamodb==6.0.1
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 python-multipart==0.0.12
 email-validator==2.2.0
 
@@ -47,7 +48,7 @@ redis==5.2.1
 aioredis==2.0.1
 
 # Monitoring & Logging
-structlog==24.5.0
+structlog==24.4.0
 python-json-logger==2.0.7
 
 # Utilities
