--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 python-multipart==0.0.12
 email-validator==2.2.0
+google-auth==2.34.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
 
 # HTTP Client
 httpx==0.28.1
